cmake_minimum_required(VERSION 3.10)
project (hello)
add_executable (hello main.cxx)
set(CMAKE_BINARY_DIR "${PROJECT_SOURCE_DIR}/../Install/")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(CMAKE_PREFIX_PATH ${PROJECT_SOURCE_DIR}/../3rdParty/opencv/build/x64/vc14/lib)
find_library(opencv_world342_LIB opencv_world342)
find_library(opencv_world342d_LIB opencv_world342d)
target_link_libraries(hello "${opencv_world342_LIB}")
target_link_libraries(hello "${opencv_world342d_LIB}")
link_directories( ${PROJECT_SOURCE_DIR}/../3rdParty/opencv/build/x64/vc14/lib )
include_directories(${PROJECT_SOURCE_DIR}/../3rdParty/opencv/build/include)
